Fix navigation spacing

--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ h1 {
 }
 .nav .nav-links {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 38%;
   font-size: 1.6rem;
   margin: 1.5% 0;
