--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,7 +15,7 @@
   
   .nav-links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 38%;
     font-size: 1.6rem;
     margin: 1.5% 0;
